# CarhuaricaAguilar_JoelGustavo_PC2

./: Actividad3-CC232..md  CMakeLists.txt  README.md  actividad1_semana1.md  actividad2_semana2.md  demo_array  pruebas
Demos/: demo_array_basico.cpp
benchmark/: main_benchmark.cpp
demos/: main.cpp
docs/: analisis_complejidad.md  estrategia_solucion.md  manual_usuario.md
include/: Solution.h
resultados/: ejecucion_demo.txt  pruebas_unitarias.txt  rendimiento_benchmark.txt
src/: Solution.cpp
tests/: test_main.cpp
